# cpr

./: how_to_build_ios.txt
build_android/: build.sh  configure.sh
build_ios/: CMakeLists.txt
build_ios/build.debug/build.arm/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
build_ios/build.debug/build.arm/cpr.build/Debug-iphoneos/ALL_BUILD.build/: Script-C602617E80284D378F278211.sh  dgph
build_ios/build.debug/build.arm/cpr.build/Debug-iphoneos/ZERO_CHECK.build/: Script-F9C00D2433764C9FA2599E8D.sh  dgph
build_ios/build.debug/build.arm/cpr.xcodeproj/: project.pbxproj
build_ios/build.debug/build.arm/cpr/cpr.build/Debug-iphoneos/cpr.build/: dgph
build_ios/build.debug/build.arm/cpr/cpr.build/Debug-iphoneos/cpr.build/Objects-normal/arm64/: cpr.LinkFileList
build_ios/build.debug/build.arm/cpr/cpr.build/Debug-iphoneos/cpr.build/Objects-normal/armv7/: cpr.LinkFileList  digest.d  error.d  proxies.d  session.d
build_ios/build.debug/build.arm/cpr/cpr.build/Debug-iphoneos/cpr.build/Objects-normal/armv7s/: cookies.d  cpr.LinkFileList  cprtypes.d
build_ios/build.debug/build.i386/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
build_ios/build.debug/build.i386/cpr.build/Debug-iphonesimulator/ALL_BUILD.build/: Script-A0A514D796EA471C897F021E.sh  dgph
build_ios/build.debug/build.i386/cpr.build/Debug-iphonesimulator/ZERO_CHECK.build/: Script-BC6B52E38D3845A69A445A18.sh  dgph
build_ios/build.debug/build.i386/cpr.xcodeproj/: project.pbxproj
build_ios/build.debug/build.i386/cpr/cpr.build/Debug-iphonesimulator/cpr.build/: dgph  dgph~
build_ios/build.debug/build.i386/cpr/cpr.build/Debug-iphonesimulator/cpr.build/Objects-normal/i386/: auth.d  cpr.LinkFileList  multipart.d  parameters.d  payload.d
build_ios/build.debug/build.x86_64/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
build_ios/build.debug/build.x86_64/cpr.build/Debug-iphonesimulator/ALL_BUILD.build/: Script-5269180D543441F4A6311019.sh  dgph
build_ios/build.debug/build.x86_64/cpr.build/Debug-iphonesimulator/ZERO_CHECK.build/: Script-920F7F9CA3794E7CB356BF8D.sh  dgph
build_ios/build.debug/build.x86_64/cpr.xcodeproj/: project.pbxproj
build_ios/build.debug/build.x86_64/cpr/cpr.build/Debug-iphonesimulator/cpr.build/: dgph
build_ios/build.debug/build.x86_64/cpr/cpr.build/Debug-iphonesimulator/cpr.build/Objects-normal/x86_64/: cpr.LinkFileList  util.d
release/: CMakeLists.txt
release/include/cpr/: multipart.h  payload.h  to_string.h
release/opt/: CMakeLists.txt
